// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript - fork checker 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
Starting type checking service...
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name         module                                                       status
  1 kB  131          (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315          (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354          ./js/script.ts + 1 modules                                   built
  1 kB  561          ./js/SomeLibrary.ts                                          built

  size  name         asset                                                        status
  1 kB  default      myBundle.min.js                                              emitted
  1 kB  map          myBundle.min.js.map                                          emitted
  1 kB  someLibrary  someLibrary.myBundle.min.js                                  emitted
  1 kB  map          someLibrary.myBundle.min.js.map                              emitted

  (8 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript - fork checker 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var t=n();for(var r in t)(\\"object\\"===typeof exports?exports:e)[r]=t[r]}})(window,(function(){return function(){\\"use strict\\";var e={315:function(e,n,t){function r(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(n,{Z:function(){return r}})},131:function(e,n,t){function r(e,n){for(var t=0;t<n.length;t++){var r=n[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(e,r.key,r)}}function o(e,n,t){return n&&r(e.prototype,n),t&&r(e,t),e}t.d(n,{Z:function(){return o}})},354:function(e,n,t){t.r(n),t.d(n,{default:function(){return i}});var r=t(315);var o=t(131);function u(e,n){return e+n}var i=function(){function e(){(0,r.Z)(this,e),console.log(\\"init class\\")}return(0,o.Z)(e,[{key:\\"method\\",value:function(){console.log(u(2,4)),t.e(399).then(t.bind(t,561)).then((function(e){var n=new e.default;console.log(n.add(2,4))}))}}]),e}()}};var n={};function t(r){if(n[r])return n[r].exports;var o=n[r]={exports:{}};return e[r](o,o.exports,t),o.exports}return t.m=e,function(){t.d=function(e,n){for(var r in n)t.o(n,r)&&!t.o(e,r)&&Object.defineProperty(e,r,{enumerable:true,get:n[r]})}}(),function(){t.f={},t.e=function(e){return Promise.all(Object.keys(t.f).reduce((function(n,r){return t.f[r](e,n),n}),[]))}}(),function(){t.u=function(e){return\\"someLibrary.myBundle.min.js\\"}}(),function(){t.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)}}(),function(){var e={};t.l=function(n,r,o){if(e[n])return void e[n].push(r);var u,i;if(void 0!==o){var a=document.getElementsByTagName(\\"script\\");for(var f=0;f<a.length;f++){var c=a[f];if(c.getAttribute(\\"src\\")==n){u=c;break}}}u||(i=true,u=document.createElement(\\"script\\"),u.charset=\\"utf-8\\",u.timeout=120,t.nc&&u.setAttribute(\\"nonce\\",t.nc),u.src=n),e[n]=[r];var l=function(t){l=function(){},u.onerror=u.onload=null,clearTimeout(s);var r=e[n];delete e[n],u.parentNode.removeChild(u),r&&r.forEach((function(e){return e(t)}))};var s=setTimeout((function(){l({type:\\"timeout\\",target:u})}),12e4);u.onerror=u.onload=l,i&&document.head.appendChild(u)}}(),function(){t.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})}}(),function(){t.p=\\"\\"}(),function(){var e={913:0};function n(n){var r=n[0];var o=n[1];var i=n[3];var a,f,c=0,l=[];for(;c<r.length;c++)f=r[c],t.o(e,f)&&e[f]&&l.push(e[f][0]),e[f]=0;for(a in o)t.o(o,a)&&(t.m[a]=o[a]);i&&i(t),u&&u(n);while(l.length)l.shift()()}t.f.j=function(n,r){var o=t.o(e,n)?e[n]:void 0;if(0!==o)if(o)r.push(o[2]);else{var u=new Promise((function(t,r){o=e[n]=[t,r]}));r.push(o[2]=u);var i=t.p+t.u(n);var a=new Error;var f=function(r){if(t.o(e,n)&&(o=e[n],0!==o&&(e[n]=void 0),o)){var u=r&&(\\"load\\"===r.type?\\"missing\\":r.type);var i=r&&r.target&&r.target.src;a.message=\\"Loading chunk \\"+n+\\" failed.\\\\n(\\"+u+\\": \\"+i+\\")\\",a.name=\\"ChunkLoadError\\",a.type=u,a.request=i,o[1](a)}};t.l(i,f,\\"chunk-\\"+n)}};var r=window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[];var o=r.push.bind(r);r.push=n;var u=o}(),t(354)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript - fork checker 3`] = `
"(window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[]).push([[399],{561:function(n,u,t){\\"use strict\\";t.r(u),t.d(u,{default:function(){return i}});var e=t(315);var r=t(131);var i=function(){function n(){(0,e.Z)(this,n)}return(0,r.Z)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}}]);
//# sourceMappingURL=someLibrary.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
  size  name     module                                                       status
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354      ./js/script.ts + 1 modules                                   built
  1 kB  561      ./js/SomeLibrary.ts                                          built

  size  name     asset                                                        status
  1 kB  js       561.myBundle.min.js                                          emitted
  1 kB  map      561.myBundle.min.js.map                                      emitted
  1 kB  ts       js/Component.d.ts                                            emitted
  1 kB  ts       js/SomeLibrary.d.ts                                          emitted
  1 kB  ts       js/script.d.ts                                               emitted
  1 kB  default  myBundle.min.js                                              emitted
  1 kB  map      myBundle.min.js.map                                          emitted

  (8 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var t=n();for(var r in t)(\\"object\\"===typeof exports?exports:e)[r]=t[r]}})(window,(function(){return function(){\\"use strict\\";var e={315:function(e,n,t){function r(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}t.d(n,{Z:function(){return r}})},131:function(e,n,t){function r(e,n){for(var t=0;t<n.length;t++){var r=n[t];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(e,r.key,r)}}function o(e,n,t){return n&&r(e.prototype,n),t&&r(e,t),e}t.d(n,{Z:function(){return o}})},354:function(e,n,t){t.r(n),t.d(n,{default:function(){return i}});var r=t(315);var o=t(131);function u(e,n){return e+n}var i=function(){function e(){(0,r.Z)(this,e),console.log(\\"init class\\")}return(0,o.Z)(e,[{key:\\"method\\",value:function(){console.log(u(2,4)),t.e(561).then(t.bind(t,561)).then((function(e){var n=new e.default;console.log(n.add(2,4))}))}}]),e}()}};var n={};function t(r){if(n[r])return n[r].exports;var o=n[r]={exports:{}};return e[r](o,o.exports,t),o.exports}return t.m=e,function(){t.d=function(e,n){for(var r in n)t.o(n,r)&&!t.o(e,r)&&Object.defineProperty(e,r,{enumerable:true,get:n[r]})}}(),function(){t.f={},t.e=function(e){return Promise.all(Object.keys(t.f).reduce((function(n,r){return t.f[r](e,n),n}),[]))}}(),function(){t.u=function(e){return e+\\".myBundle.min.js\\"}}(),function(){t.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)}}(),function(){var e={};t.l=function(n,r,o){if(e[n])return void e[n].push(r);var u,i;if(void 0!==o){var a=document.getElementsByTagName(\\"script\\");for(var f=0;f<a.length;f++){var c=a[f];if(c.getAttribute(\\"src\\")==n){u=c;break}}}u||(i=true,u=document.createElement(\\"script\\"),u.charset=\\"utf-8\\",u.timeout=120,t.nc&&u.setAttribute(\\"nonce\\",t.nc),u.src=n),e[n]=[r];var l=function(t){l=function(){},u.onerror=u.onload=null,clearTimeout(s);var r=e[n];delete e[n],u.parentNode.removeChild(u),r&&r.forEach((function(e){return e(t)}))};var s=setTimeout((function(){l({type:\\"timeout\\",target:u})}),12e4);u.onerror=u.onload=l,i&&document.head.appendChild(u)}}(),function(){t.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})}}(),function(){t.p=\\"\\"}(),function(){var e={913:0};function n(n){var r=n[0];var o=n[1];var i=n[3];var a,f,c=0,l=[];for(;c<r.length;c++)f=r[c],t.o(e,f)&&e[f]&&l.push(e[f][0]),e[f]=0;for(a in o)t.o(o,a)&&(t.m[a]=o[a]);i&&i(t),u&&u(n);while(l.length)l.shift()()}t.f.j=function(n,r){var o=t.o(e,n)?e[n]:void 0;if(0!==o)if(o)r.push(o[2]);else{var u=new Promise((function(t,r){o=e[n]=[t,r]}));r.push(o[2]=u);var i=t.p+t.u(n);var a=new Error;var f=function(r){if(t.o(e,n)&&(o=e[n],0!==o&&(e[n]=void 0),o)){var u=r&&(\\"load\\"===r.type?\\"missing\\":r.type);var i=r&&r.target&&r.target.src;a.message=\\"Loading chunk \\"+n+\\" failed.\\\\n(\\"+u+\\": \\"+i+\\")\\",a.name=\\"ChunkLoadError\\",a.type=u,a.request=i,o[1](a)}};t.l(i,f,\\"chunk-\\"+n)}};var r=window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[];var o=r.push.bind(r);r.push=n;var u=o}(),t(354)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript 3`] = `
"(window.webpackJsonp_UNIQID=window.webpackJsonp_UNIQID||[]).push([[561],{561:function(n,u,t){\\"use strict\\";t.r(u),t.d(u,{default:function(){return i}});var e=t(315);var r=t(131);var i=function(){function n(){(0,e.Z)(this,n)}return(0,r.Z)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}}]);
//# sourceMappingURL=561.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 4`] = `
"export default class SomeLibrary {
    add(a: any, b: any): any;
    substract(a: any, b: any): number;
    divide(a: any, b: any): number;
}
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (3 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1)
      TS1068: Unexpected token. A constructor, method, accessor, or property was expected.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
",
}
`;

exports[`Fails gracefully on invalid TS - fork checker 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
Starting type checking service...
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (2 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 1 problem (1 error, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Fails gracefully on invalid TS 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  475   ./js/typescript.ts + 2 modules  built failed ✖

  (3 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts(5,17)
      TS2339: Property 'someNonExistingMethod' does not exist on type 'D'.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
",
}
`;

exports[`Lints TypeScript with webpack 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                                                       status
  1 kB  131   (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315   (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  354   ./js/script.ts + 1 modules                                   built failed ✖
  1 kB  561   ./js/SomeLibrary.ts                                          built failed ✖

  (7 assets, 8 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

✖ 2 problems (2 errors, 0 warnings)
  2 errors and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/SomeLibrary.ts
  10:15  error  Delete \`⏎·\`  @swissquote/swissquote/prettier/prettier

✖ 1 problem (1 error, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`                   @swissquote/swissquote/prettier/prettier
   5:1   error    Replace \`····constructor·\` with \`··constructor\`        @swissquote/swissquote/prettier/prettier
   6:5   warning  Unexpected console statement                           no-console
   7:1   error    Insert \`·\`                                             @swissquote/swissquote/prettier/prettier
  10:5   warning  Unexpected console statement                           no-console
  10:17  error    Replace \`·test(·\` with \`test(\`                         @swissquote/swissquote/prettier/prettier
  12:34  error    Replace \`·(SomeLibrary)·=>⏎···\` with \`SomeLibrary·=>\`  @swissquote/swissquote/prettier/prettier
  16:7   warning  Unexpected console statement                           no-console
  17:7   error    Insert \`;\`                                             @swissquote/swissquote/prettier/prettier

✖ 9 problems (6 errors, 3 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 3 problems (3 errors, 0 warnings)

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) [DEP_WEBPACK_DEPRECATION_ARRAY_TO_SET] DeprecationWarning: Compilation.modules was changed from Array to Set (using Array method 'reduce' is deprecated)
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
  size  name     module                       status
  1 kB  163      ./js/index.ts + 3 modules    built

  size  name     asset                        status
  1 kB  ts       js/imported-typescript.d.ts  emitted
  1 kB  ts       js/index.d.ts                emitted
  1 kB  default  myBundle.min.js              emitted
  1 kB  map      myBundle.min.js.map          emitted

  (1 module hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
